[package]
name = "distributed-ledger"
version = "0.1.0"
edition = "2021"
description = "High-performance distributed ledger for 10K+ TPS"
authors = ["Challenge Implementation"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
crossbeam-channel = "0.5"
rayon = "1.8"
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "transaction_throughput"
harness = false